<resources>
    <string name="app_name">Movies</string>

    <string name="main_error_message">No data available</string>

    <string name="rating_label">Rating:</string>
    <string name="rating">%1$s / 10</string>

    <string name="vote_count">%1$s votes</string>

    <string name="release_date_label">Release Date:</string>
    <string name="release_date">---</string>

    <string name="overview_label">Plot Summary:</string>
    <string name="overview">---</string>

    <string name="review_label">Reviews:</string>
    <string name="review_content">---</string>
    <string name="review_author">---</string>
    <string name="dash">- </string>

    <string name="video_label">Trailers:</string>
    <string name="video_name">---</string>

    <string name="menu_popularity">Popular</string>.
    <string name="menu_rating">Top Rated</string>
    <string name="menu_favorite">Favorite</string>

    <string name="description_poster">Poster Image</string>
    <string name="description_backdrop">Backdrop Image</string>
    <string name="description_star">Rating Star Image</string>

    <string name="add_to_favorites">ADD TO FAVORITES</string>
    <string name="remove_from_favorites">REMOVE FROM FAVORITES</string>

</resources>