<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/detail_backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="@dimen/backdrop_max_height"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/description_backdrop"/>

        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/detail_backdrop"
            android:paddingTop="@dimen/padding_margin_level_3"
            android:paddingLeft="@dimen/padding_margin_level_3"
            android:paddingStart="@dimen/padding_margin_level_3"
            android:contentDescription="@string/description_poster"/>

        <TextView
            android:id="@+id/detail_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_label"
            app:layout_constraintTop_toBottomOf="@id/detail_backdrop"
            app:layout_constraintLeft_toRightOf="@id/detail_poster"
            android:layout_marginLeft="@dimen/padding_margin_level_4"
            android:layout_marginStart="@dimen/padding_margin_level_4"
            android:layout_marginTop="@dimen/padding_margin_level_3"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/detail_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star_20"
            android:layout_marginLeft="@dimen/padding_margin_level_4"
            android:layout_marginStart="@dimen/padding_margin_level_4"
            android:layout_marginTop="@dimen/padding_margin_level_1"
            app:layout_constraintTop_toBottomOf="@id/detail_rating_label"
            app:layout_constraintLeft_toRightOf="@id/detail_poster"
            android:contentDescription="@string/description_star"/>

        <TextView
            android:id="@+id/detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            app:layout_constraintTop_toBottomOf="@id/detail_rating_label"
            app:layout_constraintLeft_toRightOf="@id/detail_star"
            android:layout_marginLeft="@dimen/padding_margin_level_1"
            android:layout_marginStart="@dimen/padding_margin_level_1"
            android:layout_marginTop="@dimen/padding_margin_level_1"
            android:textSize="@dimen/text_size_medium"/>

        <TextView
            android:id="@+id/detail_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_count"
            app:layout_constraintTop_toBottomOf="@id/detail_rating"
            app:layout_constraintLeft_toRightOf="@id/detail_poster"
            android:layout_marginLeft="@dimen/padding_margin_level_4"
            android:layout_marginStart="@dimen/padding_margin_level_4"
            android:layout_marginTop="@dimen/padding_margin_level_1"/>

        <TextView
            android:id="@+id/detail_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date_label"
            app:layout_constraintTop_toBottomOf="@id/detail_vote_count"
            app:layout_constraintLeft_toRightOf="@id/detail_poster"
            android:layout_marginLeft="@dimen/padding_margin_level_4"
            android:layout_marginStart="@dimen/padding_margin_level_4"
            android:layout_marginTop="@dimen/padding_margin_level_3"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/detail_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            app:layout_constraintTop_toBottomOf="@id/detail_release_date_label"
            app:layout_constraintLeft_toRightOf="@id/detail_poster"
            android:layout_marginLeft="@dimen/padding_margin_level_4"
            android:layout_marginStart="@dimen/padding_margin_level_4"
            android:layout_marginTop="@dimen/padding_margin_level_1"/>

        <Button
            android:id="@+id/detail_favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_release_date"
            app:layout_constraintLeft_toRightOf="@id/detail_poster"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginTop="@dimen/padding_margin_level_3"
            android:onClick="addToFavoritesButton"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:paddingRight="@dimen/padding_margin_level_2"
            android:paddingLeft="@dimen/padding_margin_level_2"
            android:text="@string/add_to_favorites"
            android:visibility="visible"/>

        <Button
            android:id="@+id/detail_remove_favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_release_date"
            app:layout_constraintLeft_toRightOf="@id/detail_poster"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginTop="@dimen/padding_margin_level_3"
            android:onClick="removeFromFavoritesButton"
            android:background="@color/red"
            android:textColor="@color/white"
            android:paddingRight="@dimen/padding_margin_level_2"
            android:paddingLeft="@dimen/padding_margin_level_2"
            android:text="@string/remove_from_favorites"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/detail_overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview_label"
            app:layout_constraintTop_toBottomOf="@id/detail_poster"
            android:paddingTop="@dimen/padding_margin_level_3"
            android:paddingLeft="@dimen/padding_margin_level_3"
            android:paddingRight="@dimen/padding_margin_level_3"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/detail_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            app:layout_constraintTop_toBottomOf="@id/detail_overview_label"
            android:paddingTop="@dimen/padding_margin_level_1"
            android:paddingLeft="@dimen/padding_margin_level_3"
            android:paddingRight="@dimen/padding_margin_level_3"
            android:paddingBottom="@dimen/padding_margin_level_3"
            android:textSize="@dimen/text_size_medium"/>

        <TextView
            android:id="@+id/detail_video_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_label"
            app:layout_constraintTop_toBottomOf="@id/detail_overview"
            android:paddingTop="@dimen/padding_margin_level_1"
            android:paddingLeft="@dimen/padding_margin_level_3"
            android:paddingRight="@dimen/padding_margin_level_3"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_videos"
            app:layout_constraintTop_toBottomOf="@id/detail_video_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_review_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_label"
            app:layout_constraintTop_toBottomOf="@id/recyclerview_videos"
            android:paddingTop="@dimen/padding_margin_level_1"
            android:paddingLeft="@dimen/padding_margin_level_3"
            android:paddingRight="@dimen/padding_margin_level_3"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_reviews"
            app:layout_constraintTop_toBottomOf="@id/detail_review_label"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/review_height" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>